[Features] Now we have a better reactivity on the nav-panel on top for easier navigation with the phone

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -121,3 +121,19 @@ b {
   line-height: 1.7;
   margin-bottom: 1.1rem;
 }
+
+.view-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 90vw;
+  max-width: 60rem;
+  min-width: 0;
+  margin: 0 auto;
+  margin-top: calc(var(--nav-height) + 24px);
+  padding: 1vw 2vw;
+  background: var(--vt-c-black-mute);
+  border-radius: var(--border-radius);
+  box-shadow: var(--section-box-shadow);
+}
