--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -25,33 +25,19 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+  --color-background: var(--vt-c-black);
+  --color-background-soft: var(--vt-c-black-soft);
+  --color-background-mute: var(--vt-c-black-mute);
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+  --color-border: var(--vt-c-divider-dark-2);
+  --color-border-hover: var(--vt-c-divider-dark-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+  --color-heading: var(--vt-c-text-dark-1);
+  --color-text: var(--vt-c-text-dark-2);
 
   --section-gap: 160px;
   --section-box-shadow: 0 0.5vw 2vw 0 var(--vt-c-black-soft);
   --border-radius: 1.2vw;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
 }
 
 /* CSS Reset: Remove all default margin and padding, and set box-sizing */
@@ -130,9 +116,9 @@ b {
   width: 90vw;
   max-width: 60rem;
   min-width: 0;
-  margin: 0 auto;
-  margin-top: calc(var(--nav-height) + 24px);
-  padding: 1vw 2vw;
+  margin: 0 auto 3vw auto;
+  margin-top: 24px;
+  padding: 1vw 2vw 3vw 2vw;
   background: var(--vt-c-black-mute);
   border-radius: var(--border-radius);
   box-shadow: var(--section-box-shadow);
