--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -89,10 +89,16 @@ h2 {
 }
 h3 {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 600;
   margin: 0 0 0.2rem 0;
   color: #888;
 }
+h3 a {
+  color: inherit;         /* Makes the link inherit the h3 color */
+  text-decoration: none;  /* Removes underline */
+  font-weight: inherit;   /* Inherits boldness from h3 */
+}
+
 p {
   font-size: clamp(0.98rem, 1.2vw, 1.08rem);
   color: #b0b8c1;
